# dissolve

src/data/: fflibrary.cpp
src/data/ff/: CMakeLists.txt  cldp-il-2010.cpp  cldp-il-2010.h  library.cpp
src/data/ff/oplsaa2005/: ethers.cpp  ethers.h
src/neta/: ring.cpp  ring.h
